lectures/canary/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-podinfo-blue
  namespace: a-team
  labels:
    app: a-podinfo-blue
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: a-podinfo-blue
      version: blue
  template:
    metadata:
      labels:
        app: a-podinfo-blue
        version: blue
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: a-podinfo-blue
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - a-podinfo-blue
              topologyKey: kubernetes.io/hostname
      securityContext:
        runAsUser: 1000
      containers:
      - name: app-container
        image: ghcr.io/stefanprodan/podinfo:6.7.1
