lectures/canary/service_blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: a-podinfo-blue
  namespace: a-team
spec:
  selector:
    app: a-podinfo-blue
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9898
  type: ClusterIP
