lectures/canary/service_green.yaml
apiVersion: v1
kind: Service
metadata:
  name: a-podinfo-green
  namespace: a-team
spec:
  selector:
    app: a-podinfo-green
    version: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9898
  type: ClusterIP
